Fix rendering of form on mobiles.
Makes max width of fields 80%

--- a/www/static/css/forms.css
+++ b/www/static/css/forms.css
@@ -13,8 +13,8 @@
     display: block;
     height:15pt;
     width:230px;
-    max-width:100%;
-    max-height:100%;
+    max-width:80%;
+    max-height:80%;
 }
 
 .contact-form .fields textarea{
@@ -22,6 +22,8 @@
     left:30px; 
     width:230px;
     height:15pt;
+    max-width:80%;
+    max-height:80%;
     -webkit-transition: all 0.7s ease; 
     transition: all 0.7s ease;
 }
@@ -34,8 +36,8 @@
     left:0; 
     height:200px; 
     width:300px; 
-    max-width:100%;
-    max-height:100%;
+    max-width:80%;
+    max-height:80%;
 }
 
 .contact-form .fields input:hover,
